@@ -14,6 +14,10 @@
 #if !defined (__COPROCESSOR_H__)
 #    define   __COPROCESSOR_H__
 
+/* This coprocessor wait is require on the XScale when it is necessary
+   to guarantee that the coprocessor has finished before continuing.
+   AFAIK, this is not required on other ARM architectures. */
+
 #define COPROCESSOR_WAIT\
  ({ unsigned long v; \
     __asm volatile ("mrc p15, 0, %0, c2, c0, 0\n\t" \
