@@ -45,8 +45,6 @@
 # define RAM_BANK1_LENGTH	CONFIG_SDRAM_BANK_LENGTH
 #endif
 
-#define MVA_CACHE_CLEAN		(0x0 + 2*CONFIG_SDRAM_BANK_LENGTH)
-
 	/* MMU macro for assigning segment protection bits. */
 #define PROTECTION_FOR(p) \
 ({ int v = 0;   /* uncacheable, unbuffered */ \
